# cpp-AAD

./: .gitignore  CMakeLists.txt  CONTRIBUTIONS.md  LICENSE  README.md
.github/workflow/: CI-Pipeline.yml
.github/workflows/: main.yml
install/linux/: install_dependencies  install_dependencies.sh  testing-ci.sh
src/Exceptions/: BoxOutOfBoundsException.cpp  BoxPositionIsNotSupportedException.cpp  PointNotWithinBoxException.cpp
src/Helpers/: BoundingBox.cpp  BoundingBox.h  BoxPosition.cpp  Point2D.cpp  Point2D.h
src/Queues/: BinomialHeap.h
src/Spatial/: QuadTree.h  QuadTree.tpp
tests/: CMakeLists.txt
tests/Helpers/: BoundingBoxTest.cpp  Point2DTest.cpp
tests/Queues/: BinomialHeapTests.cpp
tests/Spatial/: QuadTreeTest.cpp
